--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="Asia/Jerusalem" data-textcolor="#ffffff" data-date="2024-12-25 00:00" data-background="#19a630" data-digitscolor="#e30909" data-unitscolor="#ff0000">‎ </a>
             
             <button id="muteButton">🔊 Mute Music</button>
+            <center><h1>Made by : Hanna Mahshi<h1><center>
         </div>
         <audio id="backgroundMusic" loop>
             <source src="dth.mp3" type="audio/mp3"> <!-- Replace with your audio file -->
