--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
     <script>
         // Playlist setup
         const playlist = [
-            "song1.mp3",  // Replace with your first audio file path
-            "song2.mp3",  // Replace with your second audio file path
-            "song3.mp3"   // Replace with your third audio file path
+            "TLDB.mp3",  // Replace with your first audio file path
+            "yttw.mp3",  // Replace with your second audio file path
+            "dth.mp3"   // Replace with your third audio file path
         ];
 
         let currentTrack = 0;
