--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christmas Countdown with Playlist</title>
+    <title>Christmas Countdown with Playlist and Candle</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.logwork.com/widget/countdown.js"></script> <!-- Embed countdown script -->
+    <script src="https://cdn.logwork.com/widget/countdown.js"></script>
     <style>
-        /* Additional styling for playlist controls */
+        /* Additional styling */
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: black;
+            color: white;
+            text-align: center;
+        }
+
         .controls {
             margin-top: 20px;
             display: flex;
@@ -27,9 +40,34 @@
         button:hover {
             background-color: #e03b3b;
         }
+
+        /* Candle styling */
+        .candle-container {
+            position: fixed;
+            bottom: 50px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .candle {
+            width: 100px;
+            height: auto;
+            cursor: pointer;
+            transition: opacity 0.5s ease; /* Fade effect */
+        }
+
+        .notification {
+            margin-top: 10px;
+            font-size: 1.2em;
+            color: #ffdb58;
+            display: none; /* Initially hidden */
+        }
     </style>
 </head>
 <body>
+    <script src="script.js"></script>
     <div class="background">
         <div class="snowflakes">
             <div class="snowflake">❆</div>
@@ -44,7 +82,7 @@
             <!-- Embedded Countdown Timer -->
             <a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="Asia/Jerusalem" data-textcolor="#ffffff" data-date="2024-12-25 00:00" data-background="#19a630" data-digitscolor="#e30909" data-unitscolor="#ff0000">‎ </a>
             
-            <!-- Playlist audio element (for the playlist functionality) -->
+            <!-- Playlist audio element -->
             <audio id="audioPlayer" autoplay></audio>
             
             <!-- Playlist controls -->
@@ -53,68 +91,16 @@
                 <button id="playPauseButton">⏯️ Play/Pause</button>
                 <button id="nextButton">⏭️ Next</button>
             </div>
-
             <button id="muteButton">🔊 Mute Playlist</button>
-            <center><h3>Made by: Hanna Mahshi</h3></center>
         </div>
     </div>
-
-    <script>
-        // Playlist setup
-        const playlist = [
-            "TLDB.mp3",  // Replace with your first audio file path
-            "yttw.mp3",  // Replace with your second audio file path
-            "dth.mp3"   // Replace with your third audio file path
-        ];
-
-        let currentTrack = 0;
-        const audioPlayer = document.getElementById('audioPlayer');
-        const playPauseButton = document.getElementById('playPauseButton');
-        const muteButton = document.getElementById('muteButton');
-
-        // Load the initial track and autoplay
-        audioPlayer.src = playlist[currentTrack];
-        audioPlayer.play();
-
-        // Function to play the next track
-        function playNextTrack() {
-            currentTrack = (currentTrack + 1) % playlist.length;
-            audioPlayer.src = playlist[currentTrack];
-            audioPlayer.play();
-        }
-
-        // Function to play the previous track
-        function playPreviousTrack() {
-            currentTrack = (currentTrack - 1 + playlist.length) % playlist.length;
-            audioPlayer.src = playlist[currentTrack];
-            audioPlayer.play();
-        }
-
-        // Toggle play/pause
-        function togglePlayPause() {
-            if (audioPlayer.paused) {
-                audioPlayer.play();
-                playPauseButton.innerText = "⏸️ Pause";
-            } else {
-                audioPlayer.pause();
-                playPauseButton.innerText = "▶️ Play";
-            }
-        }
-
-        // Toggle mute/unmute
-        function toggleMute() {
-            audioPlayer.muted = !audioPlayer.muted;
-            muteButton.innerText = audioPlayer.muted ? "🔇 Unmute Playlist" : "🔊 Mute Playlist";
-        }
-
-        // Play next track automatically when the current one ends
-        audioPlayer.addEventListener('ended', playNextTrack);
-
-        // Event listeners for playlist controls
-        document.getElementById('nextButton').addEventListener('click', playNextTrack);
-        document.getElementById('prevButton').addEventListener('click', playPreviousTrack);
-        playPauseButton.addEventListener('click', togglePlayPause);
-        muteButton.addEventListener('click', toggleMute);
-    </script>
+<br>
+<br>
+    <!-- Candle Section -->
+    <div class="candle-container">
+        <div id="clickCounter">Candle lit count: 0</div>
+        <img id="candle" src="unlitcandle.png" alt="Candle" class="candle">
+        <div id="notification" class="notification">You lit the candle! 🎉</div>
+    </div>
 </body>
 </html>
