--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     <!-- Candle Section -->
     <div class="candle-container">
         <div id="clickCounter">Candle lit count: 0</div>
-        <img id="candle" src="candle_unlit.png" alt="Candle" class="candle">
+        <img id="candle" src="unlitcandle.png" alt="Candle" class="candle">
         <div id="notification" class="notification">You lit the candle! 🎉</div>
     </div>
 
