--- a/index.html
+++ b/index.html
@@ -229,60 +229,4 @@
         muteButton.addEventListener('click', toggleMute);
 
         // Candle functionality
-        const candle = document.getElementById('candle');
-        const clickCounter = document.getElementById('clickCounter');
-        const notification = document.getElementById('notification');
-        
-        // Paths for candle images
-        const candleUnlit = 'unlitcandle.png'; 
-        const candleLit = 'litcandle.png';     
-
-        // Initialize click counter
-        let totalClicks = localStorage.getItem('totalClicks') ? parseInt(localStorage.getItem('totalClicks')) : 0;
-        clickCounter.innerText = `Candle lit count: ${totalClicks}`;
-
-        // Check last click date to enforce daily click restriction
-        const today = new Date().toISOString().slice(0, 10);
-        const lastClickDate = localStorage.getItem('lastClickDate');
-
-        // Function to light the candle
-        function lightCandle() {
-            if (lastClickDate === today) {
-                alert("You can only light the candle once per day. Come back tomorrow!");
-                return;
-            }
-
-            // Increase the click counter and store it
-            totalClicks++;
-            localStorage.setItem('totalClicks', totalClicks);
-            clickCounter.innerText = `Candle lit count: ${totalClicks}`;
-
-            // Update the last click date
-            localStorage.setItem('lastClickDate', today);
-
-            // Change the candle image and show the notification
-            candle.src = candleLit;
-            notification.style.display = "block"; 
-
-            // Fade out notification after 3 seconds
-            setTimeout(() => {
-                notification.style.display = "none";
-            }, 3000);
-        }
-
-        // Attach event listener to the candle image
-        candle.addEventListener('click', () => {
-            candle.style.opacity = 0;
-            setTimeout(() => {
-                lightCandle();
-                candle.style.opacity = 1;
-            }, 500);
-        });
-
-        // Set candle to lit if already clicked today
-        if (lastClickDate === today) {
-            candle.src = candleLit;
-        }
-    </script>
-</body>
-</html>
+        const candle = document.getElementById('
