--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
         // Playlist setup
         const playlist = [
             "dth.mp3",  // Replace with your first audio file path
-            "song2.mp3",  // Replace with your second audio file path
-            "song3.mp3"   // Replace with your third audio file path
+            "TLDM.mp3",  // Replace with your second audio file path
+            "yttw.mp3"   // Replace with your third audio file path
         ];
 
         let currentTrack = 0;
