--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         // Playlist setup
         const playlist = [
             "dth.mp3",  // Replace with your first audio file path
-            "TLDM.mp3",  // Replace with your second audio file path
+            "TLDB.mp3",  // Replace with your second audio file path
             "yttw.mp3"   // Replace with your third audio file path
         ];
 
