--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Title and Countdown -->
     <div class="container">
-        <center> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><h1> The Website has been shut down </h1>
+        <center> <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><h1> The Website has been permanently shut down </h1>
         </center>
        
 
