--- a/facts.html
+++ b/facts.html
@@ -159,7 +159,7 @@
 </head>
 <body>
     <a href="https://www.paypal.com/donate/?hosted_button_id=GNV9RTZRFQQS4" class="donate">Donate</a>
-    <a href="index.html" class="back-button">Back to Main</a>
+    <a href="https://christmascd.vercel.app" class="back-button">Back to Main</a>
     <!-- Snowflakes Animation -->
     <div class="snowflakes">
         <div class="snowflake">❆</div>
