--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christmas Countdown</title>
-    <link rel="shortcut icon" href="candlewithdark.png" type="image/x-icon">
+    <title>Christmas Countdown with Playlist and Candle</title>
     <script src="https://cdn.logwork.com/widget/countdown.js"></script>
+    <link rel="shortcut icon" href="riconccd.png" type="image/x-icon">
     <style>
         /* Reset and Basic Styles */
         * {
@@ -16,7 +16,7 @@
 
         body, html {
             height: 100%;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             overflow: hidden;
             color: white;
             text-align: center;
@@ -101,6 +101,71 @@
             gap: 10px;
             z-index: 10;
         }
+    /* Basic styling for the main container and category button */
+    .playlist-category {
+        position: relative;
+        display: inline-block;
+    }
+
+    .category-button {
+        background-color: #ff4c4c;
+        color: white;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s, transform 0.3s;
+    }
+
+    .category-button:hover {
+        background-color: #e03b3b;
+        transform: scale(1.05);
+    }
+
+    .dropdown-menu {
+        display: none;
+        position: absolute;
+        left: 100%;
+        top: 0;
+        background-color: #ff4c4c;
+        min-width: 150px;
+        border-radius: 5px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        opacity: 0;
+        transition: opacity 0.3s ease-in-out;
+    }
+
+    .dropdown-menu button {
+        width: 100%;
+        padding: 10px 15px;
+        background-color: #ff4c4c;
+        color: white;
+        border: none;
+        border-bottom: 1px solid #555;
+        text-align: left;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+    .dropdown-menu button:hover {
+        background-color: #e03b3b;
+    }
+
+    /* Smooth display of the dropdown menu */
+    .playlist-category:hover .dropdown-menu {
+        display: block;
+        opacity: 1;
+    }
+
+    .dropdown-menu button:hover {
+        background-color: #e03b3b;
+    }
+
+    /* Display the dropdown menu when hovering over the category button */
+    .playlist-category:hover .dropdown-menu {
+        display: block;
+    }
+
 
         button {
             padding: 10px 15px;
@@ -164,6 +229,24 @@
             margin: px 250;
             left: 12px;
         }
+        /* Style for the facts page button */
+    .facts-button {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        background-color: #ff4c4c;
+        color: white;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+
+    .facts-button:hover {
+        background-color: #bb2d2d;
+    }
+        
     </style>
 </head>
 <body>
@@ -188,12 +271,18 @@
 
     <!-- Playlist Controls -->
     <div class="controls">
-        <button id="donateButton" onclick="window.location.href='https://www.paypal.com/donate/?hosted_button_id=M4PG4VDRNGYJC'">💲 Donate</button>
-        <button id="muteButton">🔊</button>
-        <button id="prevButton">⏮️</button>
-        <button id="playPauseButton">⏯️</button>
-        <button id="nextButton">⏭️</button>
-
+        <button id="donateButton" onclick="window.location.href='https://www.paypal.com/donate/?hosted_button_id=GNV9RTZRFQQS4'">Donate</button>
+        <button class="facts-button" onclick="window.location.href='facts.html'">Facts</button>
+        <div class="playlist-category">
+            <button class="category-button">Playlist Settings</button>
+            <div class="dropdown-menu">
+                <button id="prevButton">⏮️ Previous</button>
+                <button id="playPauseButton">▶️ Play</button>
+                <button id="nextButton">⏭️ Next</button>
+                <button id="muteButton">🔊 Mute</button>
+            </div>
+    </div>
+    
     </div>
 <br>
 <h3>Light a candle for peace till Christmas</h3>
@@ -209,61 +298,62 @@
 
     <!-- JavaScript Functionality -->
     <script>
-        // Playlist setup
-        const playlist = [
-            "dth.mp3",  // Replace with your first audio file path
-            "TLDB.mp3",  // Replace with your second audio file path
-            "yttw.mp3"   // Replace with your third audio file path
-        ];
+      // Playlist setup
+      const playlist = [
+        "dth.mp3",  // Replace with your first audio file path
+        "TLDB.mp3",  // Replace with your second audio file path
+        "yttw.mp3"   // Replace with your third audio file path
+    ];
 
-        let currentTrack = 0;
-        const audioPlayer = document.getElementById('audioPlayer');
-        const playPauseButton = document.getElementById('playPauseButton');
-        const muteButton = document.getElementById('muteButton');
+    let currentTrack = 0;
+    const audioPlayer = document.getElementById('audioPlayer');
+    const playPauseButton = document.getElementById('playPauseButton');
+    const muteButton = document.getElementById('muteButton');
 
-        // Load the initial track and autoplay
+    // Load the initial track and autoplay
+    audioPlayer.src = playlist[currentTrack];
+    audioPlayer.play();
+
+    // Function to play the next track
+    function playNextTrack() {
+        currentTrack = (currentTrack + 1) % playlist.length;
         audioPlayer.src = playlist[currentTrack];
         audioPlayer.play();
+    }
 
-        // Function to play the next track
-        function playNextTrack() {
-            currentTrack = (currentTrack + 1) % playlist.length;
-            audioPlayer.src = playlist[currentTrack];
+    // Function to play the previous track
+    function playPreviousTrack() {
+        currentTrack = (currentTrack - 1 + playlist.length) % playlist.length;
+        audioPlayer.src = playlist[currentTrack];
+        audioPlayer.play();
+    }
+
+    // Toggle play/pause
+    function togglePlayPause() {
+        if (audioPlayer.paused) {
             audioPlayer.play();
+            playPauseButton.innerText = "⏸️ Pause";
+        } else {
+            audioPlayer.pause();
+            playPauseButton.innerText = "▶️ Play";
         }
+    }
 
-        // Function to play the previous track
-        function playPreviousTrack() {
-            currentTrack = (currentTrack - 1 + playlist.length) % playlist.length;
-            audioPlayer.src = playlist[currentTrack];
-            audioPlayer.play();
-        }
+    // Toggle mute/unmute
+    function toggleMute() {
+        audioPlayer.muted = !audioPlayer.muted;
+        muteButton.innerText = audioPlayer.muted ? "🔇 Unmute" : "🔊 Mute";
+    }
 
-        // Toggle play/pause
-        function togglePlayPause() {
-            if (audioPlayer.paused) {
-                audioPlayer.play();
-                playPauseButton.innerText = "⏸️";
-            } else {
-                audioPlayer.pause();
-                playPauseButton.innerText = "▶️";
-            }
-        }
+    // Play next track automatically when the current one ends
+    audioPlayer.addEventListener('ended', playNextTrack);
 
-        // Toggle mute/unmute
-        function toggleMute() {
-            audioPlayer.muted = !audioPlayer.muted;
-            muteButton.innerText = audioPlayer.muted ? "🔇" : "🔊";
-        }
+    // Event listeners for playlist controls
+    document.getElementById('nextButton').addEventListener('click', playNextTrack);
+    document.getElementById('prevButton').addEventListener('click', playPreviousTrack);
+    playPauseButton.addEventListener('click', togglePlayPause);
+    muteButton.addEventListener('click', toggleMute);
 
-        // Play next track automatically when the current one ends
-        audioPlayer.addEventListener('ended', playNextTrack);
-
-        // Event listeners for playlist controls
-        document.getElementById('nextButton').addEventListener('click', playNextTrack);
-        document.getElementById('prevButton').addEventListener('click', playPreviousTrack);
-        playPauseButton.addEventListener('click', togglePlayPause);
-        muteButton.addEventListener('click', toggleMute);
 
         // Candle functionality
         const candle = document.getElementById('candle');
