--- a/facts.html
+++ b/facts.html
@@ -191,7 +191,7 @@
             "The abbreviation X in X-Mas is not an abbreviation. It actually stands for 'Chi', meaning Christ in Greek.",
             "When the Candy Cane was invented in Germany, it was made into a J for Jesus. The red stripes symbolize his blood.",
             "Christmas trees usually grow for close to 15 years before they can be sold.",
-            "Did you know? If you type in Google Christmas a gift will drop and you can open it and play a game.",
+            "Did you know? If you type in Google 'Christmas' a gift will appear and you can open it and play a game.",
             "Legend says we hang stockings by the chimney because a poor widower couldn’t afford dowries for his three daughters. St. Nick dropped gold down their chimney, landing in the stockings drying by the fire. The tradition stuck ever since",
             "The famous Christmas song 'Silent Night' was first performed in Austria on Christmas Eve in 1818."
         ];
