--- a/story.html
+++ b/story.html
@@ -20,6 +20,8 @@
         background-size: cover;
         background-position: center;
         position: absolute;
+         opacity: 0;
+        transition: opacity 1s ease-in-out;
     }
 
     .navigation-buttons {
@@ -138,11 +140,15 @@
     ].map(image => imagesFolder + image);
 
     let currentIndex = 0;
+     const galleryImage = document.getElementById('galleryImage');
 
     function updateImage() {
-        document.getElementById('galleryImage').style.backgroundImage = `url('${images[currentIndex]}')`;
-        document.getElementById('imageCounter').innerText = `${currentIndex + 1} / ${images.length}`;
-    }
+        galleryImage.style.opacity = 0;
+        setTimeout(() => {
+            galleryImage.style.backgroundImage = `url('${images[currentIndex]}')`;
+            document.getElementById('imageCounter').innerText = `${currentIndex + 1} / ${images.length}`;
+            galleryImage.style.opacity = 1;
+        }, 500);
 
     document.getElementById('prevButton').addEventListener('click', () => {
         currentIndex = (currentIndex - 1 + images.length) % images.length;
