--- a/story.html
+++ b/story.html
@@ -5,6 +5,7 @@
         padding: 0;
         height: 100%;
         overflow: hidden;
+        background-color: black;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
@@ -20,7 +21,7 @@
         background-size: cover;
         background-position: center;
         position: absolute;
-         opacity: 0;
+        opacity: 0;
         transition: opacity 1s ease-in-out;
     }
 
@@ -140,7 +141,7 @@
     ].map(image => imagesFolder + image);
 
     let currentIndex = 0;
-     const galleryImage = document.getElementById('galleryImage');
+    const galleryImage = document.getElementById('galleryImage');
 
     function updateImage() {
         galleryImage.style.opacity = 0;
@@ -149,6 +150,7 @@
             document.getElementById('imageCounter').innerText = `${currentIndex + 1} / ${images.length}`;
             galleryImage.style.opacity = 1;
         }, 500);
+    }
 
     document.getElementById('prevButton').addEventListener('click', () => {
         currentIndex = (currentIndex - 1 + images.length) % images.length;
