--- a/facts.html
+++ b/facts.html
@@ -185,7 +185,7 @@
     <script>
         const facts = [
             "Did you know? The song 'Jingle Bells' was originally written for Thanksgiving.",
-            "TThe most popular theory of why we leave cookies and milk out for Santa is because Dutch children would leave food and drink out for St. Nicholas on his feast day.",
+            "The most popular theory of why we leave cookies and milk out for Santa is because Dutch children would leave food and drink out for St. Nicholas on his feast day.",
             "The tradition of Christmas trees goes back to the ancient Egyptians and Romans, who decorated their homes with evergreen boughs during the winter solstice.",
             "The reason we give presents during Christmas is to symbolize the gifts given to Jesus by the three wise men.",
             "The abbreviation X in X-Mas is not an abbreviation. It actually stands for 'Chi', meaning Christ in Greek.",
