--- a/story.html
+++ b/story.html
@@ -5,8 +5,8 @@
         padding: 0;
         height: 100%;
         overflow: hidden;
-        background-color: black;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: black;
     }
 
     .gallery-container {
@@ -18,7 +18,8 @@
     .gallery-image {
         width: 100%;
         height: 100%;
-        background-size: cover;
+        background-size: contain;
+        background-repeat: no-repeat;
         background-position: center;
         position: absolute;
         opacity: 0;
@@ -107,6 +108,35 @@
 
     .back-button:hover {
         background-color: #0056b3;
+    }
+
+    @media (max-width: 768px) {
+        .controls {
+            flex-direction: column;
+            align-items: center;
+            top: auto;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+        .nav-button {
+            padding: 8px 15px;
+            font-size: 1em;
+            margin-bottom: 5px;
+        }
+        .fullscreen-button {
+            top: 15px;
+            right: 15px;
+            padding: 8px 12px;
+        }
+        .back-button {
+            top: 15px;
+            left: 15px;
+            padding: 8px 12px;
+        }
+        .gallery-image {
+            background-size: contain;
+        }
     }
 
     @media (orientation: portrait) {
