--- a/story.html
+++ b/story.html
@@ -33,6 +33,7 @@
         display: flex;
         justify-content: space-between;
         transform: translateY(-50%);
+        
     }
 
     .nav-button {
@@ -54,7 +55,7 @@
         position: absolute;
         top: 20px;
         right: 20px;
-        background-color: #28a745;
+        background-color: #28a74652;
         color: white;
         border: none;
         padding: 10px 15px;
@@ -97,7 +98,7 @@
         position: fixed;
         top: 20px;
         left: 20px;
-        background-color: #007bff;
+        background-color: #007bff50;
         color: white;
         border: none;
         padding: 10px 15px;
@@ -204,4 +205,5 @@
 
     // Initial image load
     updateImage();
+    
 </script>
