--- a/facts.html
+++ b/facts.html
@@ -172,7 +172,7 @@
 
     <header>
         <header>
-            <h1>Daily Christmas Fact</h1>
+            <h1>Christmas Facts</h1>
            
         </header>
     </header>
