--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Christmas Countdown with Playlist and Candle</title>
+    <title>Christmas Countdown</title>
     <script src="https://cdn.logwork.com/widget/countdown.js"></script>
     <link rel="shortcut icon" href="riconccd.png" type="image/x-icon">
     <style>
