--- a/thanks.html
+++ b/thanks.html
@@ -8,53 +8,38 @@
         body, html {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
             height: 100%;
+            width: 100%;
             display: flex;
-            flex-direction: column;
-            justify-content: center;
             align-items: center;
-            background: linear-gradient(to bottom, #0084ff, #00e4ff);
-            overflow: hidden;
+            justify-content: center;
+            background: url('thanksdonation.png') no-repeat center center fixed; /* Replace 'your-image.jpg' with your image path */
+            background-size: cover;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
-        .image-container {
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .responsive-image {
-            max-width: 100%;
-            max-height: 100%;
-            object-fit: cover;
-        }
-
-        .home-button {
-            position: absolute;
+        .return-button {
+            position: fixed;
             top: 20px;
             left: 20px;
-            padding: 10px 15px;
+            padding: 10px 20px;
             background-color: #ff4c4c;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            font-size: 1em;
             transition: background-color 0.3s;
             text-decoration: none;
         }
 
-        .home-button:hover {
+        .return-button:hover {
             background-color: #e03b3b;
         }
     </style>
 </head>
 <body>
-    <a href="index.html" class="home-button">Back to Home</a>
-    <div class="image-container">
-        <img src="thanksdonation.png" alt="Responsive Image" class="responsive-image">
-    </div>
+    <a href="index.html" class="return-button">Return Home</a>
 </body>
 </html>
