--- a/index.html
+++ b/index.html
@@ -325,6 +325,9 @@
 
     <!-- JavaScript Functionality -->
     <script>
+
+         window.location.href = "celebration.html";
+        
       // Playlist setup
       const playlist = [
         "dth.mp3",  // Replace with your first audio file path
